modules/gdscript/tests/scripts/analyzer/errors/nullable_binary_operator_both_operands.gd
func test():
    var foo: int? = null
    var bar: int? = null
    print(foo + bar) # Should error
